# Uber-Rides-Prediction

./: README.md  app.py  pyproject.toml  requirements.txt  uber_model.pkl
static/: style.css
templates/: index.html
